# french-words-covering

./: .gitattributes  aa.ipynb  dico-fr.parquet  gitignore  pyproject.toml
notebooks/: dev.ipynb
src/french_words_covering/: app.py
