[tool.poetry]
name = "french-words-covering"
version = "0.1.0"
description = ""
authors = ["François W <francois.weber@adevinta.com>"]
readme = "README.md"
packages = [{include = "french_words_covering", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
streamlit = "^1.45.1"
streamlit-shortcuts = "^1.0.0"
watchdog = "^6.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
